--- a/Tip Calculator/style.css
+++ b/Tip Calculator/style.css
@@ -1,3 +1,9 @@
+:root {
+  --main-color: red;
+  --secondary-color: #f46d6d;
+  --grey: #e6e6e6;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -7,7 +13,7 @@
 body {
   background-color: #f3f3f3;
   height: 100%;
-  background: linear-gradient(135deg, #6f6df4, #4c4af4) fixed;
+  background: linear-gradient(135deg, #f46d6d, #ff2222) fixed;
   background-size: 100% 50%;
   background-repeat: no-repeat;
 }
@@ -44,8 +50,8 @@ body {
 }
 
 .input-box {
-  background-color: #cdccfd;
-  color: #6f6df4;
+  background-color: var(--grey);
+  color: var(--secondary-color);
   padding: 5px;
 }
 
@@ -55,7 +61,7 @@ body {
   outline: none;
   width: 100px;
   text-align: center;
-  color: #6f6df4;
+  color: var(--secondary-color);
 }
 
 hr {
@@ -81,19 +87,19 @@ section:not(:first-child) {
 }
 
 section:last-child {
-  background-color: #cdccfd;
+  background-color: var(--grey);
   padding: 10px;
   border-radius: 5px;
 }
 
 section:last-child .lbl,
 section:last-child .val {
-  color: #4c4af4;
+  color: var(--secondary-color);
 }
 
 /* input range styling */
 input[type="range"] {
-  height: 34px;
+  height: 26px;
   -webkit-appearance: none;
   margin: 10px 0;
   width: 100%;
@@ -103,50 +109,50 @@ input[type="range"]:focus {
 }
 input[type="range"]::-webkit-slider-runnable-track {
   width: 100%;
-  height: 11px;
+  height: 7px;
   cursor: pointer;
   animate: 0.2s;
   box-shadow: 1px 1px 1px #000000;
-  background: #74a9d8;
-  border-radius: 1px;
+  background: #ff0000;
+  border-radius: 10px;
   border: 0px solid #010101;
 }
 input[type="range"]::-webkit-slider-thumb {
   box-shadow: 1px 1px 1px #000031;
-  border: 1px solid #00001e;
-  height: 26px;
-  width: 26px;
+  border: 1px solid #ff0000;
+  height: 18px;
+  width: 18px;
   border-radius: 15px;
   background: #ffffff;
   cursor: pointer;
   -webkit-appearance: none;
-  margin-top: -8px;
+  margin-top: -6px;
 }
 input[type="range"]:focus::-webkit-slider-runnable-track {
-  background: #74a9d8;
+  background: #ff0000;
 }
 input[type="range"]::-moz-range-track {
   width: 100%;
-  height: 11px;
+  height: 7px;
   cursor: pointer;
   animate: 0.2s;
   box-shadow: 1px 1px 1px #000000;
-  background: #74a9d8;
-  border-radius: 1px;
+  background: #ff0000;
+  border-radius: 10px;
   border: 0px solid #010101;
 }
 input[type="range"]::-moz-range-thumb {
   box-shadow: 1px 1px 1px #000031;
-  border: 1px solid #00001e;
-  height: 26px;
-  width: 26px;
+  border: 1px solid #ff0000;
+  height: 18px;
+  width: 18px;
   border-radius: 15px;
   background: #ffffff;
   cursor: pointer;
 }
 input[type="range"]::-ms-track {
   width: 100%;
-  height: 11px;
+  height: 7px;
   cursor: pointer;
   animate: 0.2s;
   background: transparent;
@@ -154,31 +160,32 @@ input[type="range"]::-ms-track {
   color: transparent;
 }
 input[type="range"]::-ms-fill-lower {
-  background: #74a9d8;
+  background: #ff0000;
   border: 0px solid #010101;
-  border-radius: 2px;
+  border-radius: 20px;
   box-shadow: 1px 1px 1px #000000;
 }
 input[type="range"]::-ms-fill-upper {
-  background: #74a9d8;
+  background: #ff0000;
   border: 0px solid #010101;
-  border-radius: 2px;
+  border-radius: 20px;
   box-shadow: 1px 1px 1px #000000;
 }
 input[type="range"]::-ms-thumb {
   margin-top: 1px;
   box-shadow: 1px 1px 1px #000031;
-  border: 1px solid #00001e;
-  height: 26px;
-  width: 26px;
+  border: 1px solid #ff0000;
+  height: 18px;
+  width: 18px;
   border-radius: 15px;
   background: #ffffff;
   cursor: pointer;
 }
 input[type="range"]:focus::-ms-fill-lower {
-  background: #74a9d8;
+  background: #ff0000;
 }
 input[type="range"]:focus::-ms-fill-upper {
-  background: #74a9d8;
+  background: #ff0000;
 }
+
 /* input range styling end */
