--- a/Dice/style.css
+++ b/Dice/style.css
@@ -1,49 +1,48 @@
 body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 18px;
-    background-color: #3e0078;
-    color: white;
+  margin: 0;
+  padding: 0;
+  background-color: #3e0078;
+  color: white;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 18px;
 }
 
 .container {
-    display: flex;
     min-height: 100vh;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .wrapper {
-    text-align: center;
+  text-align: center;
 }
 
 .wrapper > * {
-    margin: 10px;
+  margin: 10px;
 }
 
 #title {
-    font-size: 100px;
     margin-bottom: 50px;
+  font-size: 100px;
 }
 
 #roll-value {
-    font-size: 125px;
+  font-size: 125px;
 }
 
 #btn {
-    padding: 10px 20px;
-    font-size: 25px;
-    border-radius: 10px;
-    border: none;
     background-color: red;
-    color: white;
-    cursor: pointer;
-    transition: 0.5s ease;
+    font-size: 25px;
+    padding: 10px 20px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 0.5s ease;
 }
 
 #btn:hover {
-    opacity: 0.65;
-    transform: translateY(-5px);
     background-color: orange;
+  opacity: 0.65;
+  transform: translateY(-5px);
 }
