--- a/Landing/style.css
+++ b/Landing/style.css
@@ -71,22 +71,25 @@ nav ul li a:hover {
 
 .contents {
   display: flex;
-  margin: 1rem;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 80%;
+  margin: 0 auto;
 }
 
 .card {
-  margin: 0 1rem;
-  border: 1px solid red;
-  max-width: 100%;
-  max-height: 100%;
+  margin: 0.5rem 0.5rem;
+  max-width: 20%; 
+  min-height: 100%;
   text-align: center;
-  width: fit-content;
+  background-color: #c7c7c7;
+  border-radius: 0.75rem;
 }
 
 .card img {
-  max-width: 70%;
-  max-height: 100%;
+  max-width: 200px;
+  max-height: 200px;
+  margin: 0.5rem 0;
 }
 
 .content {
@@ -94,4 +97,5 @@ nav ul li a:hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 1rem;
 }
