--- a/Landing/style.css
+++ b/Landing/style.css
@@ -25,8 +25,8 @@ nav {
 
 nav ul {
   display: flex;
-  align-items: center;
   justify-content: space-around;
+  align-items: center;
   list-style: none;
   margin: 1rem;
 }
@@ -71,19 +71,19 @@ nav ul li a:hover {
 
 .contents {
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
+  flex-wrap: wrap;
   max-width: 80%;
   margin: 0 auto;
 }
 
 .card {
-  margin: 0.5rem 0.5rem;
+  background-color: #c7c7c7;
   max-width: 20%; 
   min-height: 100%;
-  text-align: center;
-  background-color: #c7c7c7;
+  margin: 0.5rem;
   border-radius: 0.75rem;
+  text-align: center;
 }
 
 .card img {
@@ -94,8 +94,8 @@ nav ul li a:hover {
 
 .content {
   display: flex;
-  flex-direction: column;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
   margin: 1rem;
 }
