--- a/Landing/style.css
+++ b/Landing/style.css
@@ -1,7 +1,10 @@
 :root {
-  --color-primary: #e9e9e9;
-  --color-secondary: #000;
+  --color-primary: #fae8e0;
+  --color-secondary: #d8a7b1;
   --accent: #e60000;
+
+  --Roboto-Mono: "Roboto Mono", monospace;
+  --Josefin-Sans: "Josefin Sans", sans-serif;
 }
 
 * {
@@ -40,11 +43,14 @@ nav ul li a {
   color: var(--color-secondary);
   font-size: 1.2rem;
   font-weight: 600;
+  font-family: var(--Roboto-Mono);
 }
 
 nav h1 {
+  color: var(--color-secondary);
   font-size: 2rem;
-  font-weight: 800;
+  font-weight: 700;
+  font-family: var(--Josefin-Sans);
 }
 
 nav ul li a:hover {
@@ -60,13 +66,17 @@ nav ul li a:hover {
 }
 
 .hero h1 {
+  color: var(--color-secondary);
   font-size: 3rem;
-  font-weight: 800;
+  font-weight: 400;
   text-align: center;
+  font-family: var(--Josefin-Sans);
 }
 
 .hero h1 span {
   color: var(--accent);
+  font-family: var(--Josefin-Sans);
+  font-weight: 700;
 }
 
 .contents {
@@ -78,18 +88,21 @@ nav ul li a:hover {
 }
 
 .card {
-  background-color: #c7c7c7;
-  max-width: 20%; 
+  background-color: #b6e2d3;
+  max-width: 20%;
   min-height: 100%;
   margin: 0.5rem;
   border-radius: 0.75rem;
   text-align: center;
+  font-family: var(--Roboto-Mono);
+  cursor: pointer;
 }
 
 .card img {
-  max-width: 200px;
+  max-width: 100%;
   max-height: 200px;
   margin: 0.5rem 0;
+  border-radius: 0.45rem;
 }
 
 .content {
@@ -98,4 +111,23 @@ nav ul li a:hover {
   flex-direction: column;
   align-items: center;
   margin: 1rem;
+  max-width: 100%;
+  max-height: 100%;
 }
+
+@media screen and (max-width: 850px) {
+  .card {
+    max-width: 100%;
+  }
+  .contents {
+    flex-direction: column;
+  }
+}
+/* between 850px and 1200px screen width */
+@media screen and (min-width: 850px) and (max-width: 1200px) {
+  .card {
+    max-width: 40%;
+  }
+}
+
+/* Language: css */
