--- a/Landing/style.css
+++ b/Landing/style.css
@@ -96,6 +96,7 @@ nav ul li a:hover {
   text-align: center;
   font-family: var(--Roboto-Mono);
   cursor: pointer;
+  transition: 0.5s ease;
 }
 
 .card img {
@@ -103,6 +104,11 @@ nav ul li a:hover {
   max-height: 200px;
   margin: 0.5rem 0;
   border-radius: 0.45rem;
+}
+
+.card:hover {
+  background-color: #a3d0c1;
+  transform: scale(1.05);
 }
 
 .content {
